inventory controller and one_product.html

--- a/app/views/inventory/one_product.html.erb
+++ b/app/views/inventory/one_product.html.erb
@@ -1,2 +1,3 @@
-<h1>Inventory#one_product</h1>
-<p>Find me in app/views/inventory/one_product.html.erb</p>
+<td><%= @product.name %></td>
+<td><%= @product.price %></td>
+<td><%= @product.category %></td>
