--- a/app/views/inventory/by_category.html.erb
+++ b/app/views/inventory/by_category.html.erb
@@ -1,8 +1,10 @@
 <table>
   <thead>
     <tr>
+      <th>Name</th>
+      <th>Price</th>
       <th>Category</th>
-      <th colspan="1"></th>
+      <th colspan="3"></th>
     </tr>
   </thead>
 
